# version-tool

./: CMakeLists.txt  README.md  main.c  version.h.template  version.json
cmake/: .version-tools-config.cmake.swp  version-tools-config.cmake
tools/: version_tools.py
tools/version/: .version_tools.py.swp  version_tools.py
tools/version/cmake/: .version-tools-config.cmake.swp  version-tools-config.cmake
